Responsive fixes
Background images on home page, overlapped featured person image and
slider arrows.

--- a/assets/less/components/_graphics.less
+++ b/assets/less/components/_graphics.less
@@ -23,7 +23,8 @@
   only screen and (        min-device-pixel-ratio: 2),
   only screen and (                min-resolution: 192dpi),
   only screen and (                min-resolution: 2dppx) {
-    background: url('../img/hero-overlay@2x.png') 0 0 no-repeat;
+    background: url('../img/hero-overlay@2x.png');
+    background-repeat: no-repeat;
     background-size: 456px 326px;
   }
 }
@@ -40,7 +41,8 @@
 	only screen and (        min-device-pixel-ratio: 2),
 	only screen and (                min-resolution: 192dpi),
 	only screen and (                min-resolution: 2dppx) {
-		background: url('../img/sprite@2x.png') 0 0 no-repeat;
+		background-image: url('../img/sprite@2x.png');
+    background-repeat: no-repeat;
 		background-size: 600px 500px;
   	}
 
