--- a/assets/less/layouts/_theme_colors.less
+++ b/assets/less/layouts/_theme_colors.less
@@ -61,6 +61,12 @@
 			background-attachment: scroll;
 		}
 		*/
+
+		only screen and (min-resolution: 192dpi),
+    	only screen and (min-resolution: 2dppx) {
+   			background-attachment: scroll;
+    	}
+    	
 	 	@media only screen and (max-width: @screen-sm-max) {
 	 		background-attachment: scroll;
 	 	}
